# Dakota

./: .env  .env.development  .env.production  .gitignore  README.md  package.json  pyproject.toml  trigger.sql
app/: config.py  database.py  main.py
app/services/Auth/: generate_data.py  main.py  models.py  schemas.py  test.py  utils.py
app/services/Auth/routes/: auth.py  users.py
app/services/SensorManager/: generate_data.py  main.py  models.py  schemas.py  test.py
app/services/SensorManager/routes/: map.py  measurements.py  mount_points.py  parameters.py  reports.py  sensors.py
app/services/SensorManager/services/: TriggerListener.py
public/: index.html
src/: i18n.js  index.css  index.js  themes.js
src/components/: Context.js  LanguageSwitcher.js  Loading.js  Logo.js  ThemeSwitcher.js
src/components/Auth/: Context.js  Login.js  ResetPassword.js  Users.js
src/components/SensorManager/: App.js  Charts.js  Context.js  Crash.js  Map.js  Parameters.js  Search.js  TimeIntervalsCharts.js
